Add unit tests for ShariahAuditService, ShariahScreeningService, and SnciService
- Implement comprehensive tests for ShariahAuditService covering audit planning, compliance score calculation, sample review, finding creation, and report generation.
- Create tests for ShariahScreeningService to validate transaction screening against exclusion lists and rules, including handling alerts and compliance checks.
- Develop tests for SnciService to ensure proper handling of SNCI records, including creation, quarantine, dispute resolution, and total unpurified amount calculation.